# dxee-china

./: .envrc  .gitignore  Advanced_Web_Research_Requirements_Design_Tasks.md  CLAUDE.md  DEEP_SEARCH_IMPLEMENTATION.md  PASSWORD_RESET_TECHNICAL_SPECS.md  README.md  VENV_SETUP.md  activate_backend.sh  backend_vs_frontend_comparison.md  backend_vs_frontend_comparison2.md  backend_vs_frontend_comparison3.md  check_mongodb_user.py  docker-compose.yml  serper-mcp-design.md  serper-mcp-requirement.md  serper-mcp-tasks.md  setup_venvs.sh
backend/: .env.example  README_ADVANCED_WEB_RESEARCH.md  README_DEEPSEEK_WEB_SEARCH.md  README_LIVE_REASONING_WEB.md  README_REASONING_TESTS.md  check_mongodb_users.py  debug_session.py  debug_session_handler.py  fix_session_issue.py  pyproject.toml  requirements.txt  research_results_20250904_104734.json  reset_mongodb_schema.py  run.sh  run_reasoning_tests.py  test_admin_access.py  test_admin_fix.py  test_api.sh  test_cookie_format.py  test_deepseek_advanced_web_research2.py  test_deepseek_advanced_web_research3_01.py  test_deepseek_advanced_web_research3_02.py  test_deepseek_advanced_web_research3_03.py  test_deepseek_advanced_web_research3_04.py  test_deepseek_advanced_web_research3_05.py  test_deepseek_advanced_web_research3_06.py  test_deepseek_advanced_web_research3_07.py  test_deepseek_advanced_web_research4_01.py  test_deepseek_api.py  test_deepseek_concurrent.py  test_deepseek_integration.py  test_deepseek_performance_benchmark.py  test_deepseek_reasoning_with_web_search.py  test_deepseek_result_validation.py  test_deepseek_timeout.py  test_email_masking.py  test_google_auth.py  test_live_reasoning_stream.py  (+9 more)
frontend/: run.sh  (+2 more)
(+110 files in other folders)
