[project]
name = "deepschina-backend"
version = "0.1.0"
description = "Deepschina backend service with Tornado and MongoDB"
authors = [
    { name = "jun-JUNJUN", email = "donkun77jp@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp==3.8.5",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "bcrypt==4.0.1",
    "beautifulsoup4==4.12.3",
    "camel-converter==4.0.1",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "distro==1.9.0",
    "exceptiongroup==1.3.0",
    "frozenlist==1.6.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "jiter==0.10.0",
    "lxml==5.3.0",
    "lxml-html-clean>=0.4.2",
    "meilisearch-python-sdk==4.6.0",
    "motor==3.3.2",
    "multidict==6.4.4",
    "newspaper3k==0.2.8",
    "openai==1.82.0",
    "packaging==25.0",
    "propcache==0.3.1",
    "psutil>=7.0.0",
    "pydantic==2.11.5",
    "pydantic_core==2.33.2",
    "PyJWT==2.10.1",
    "pymongo==4.6.1",
    "python-dotenv==1.0.0",
    "readability-lxml==0.8.1",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "tiktoken>=0.9.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.13.2",
    "urllib3==2.4.0",
    "yarl==1.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
